--- a/BetterCharacterController/BetterCharacterController.csproj
+++ b/BetterCharacterController/BetterCharacterController.csproj
@@ -57,7 +57,6 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AssemblyInfo.cs" />
-    <Compile Include="Core\BetterCharacterController.cs" />
     <Compile Include="Core\GroundController.cs" />
     <Compile Include="Core\StateMachine\ControllerStateMachine.cs" />
     <Compile Include="Core\StateMachine\States\ControllerIdleState.cs" />
@@ -66,8 +65,8 @@
     <Compile Include="Core\StateMachine\States\ControllerJumpingState.cs" />
     <Compile Include="Core\Utilities\DebugDraw.cs" />
     <Compile Include="Core\Utilities\MathUtils.cs" />
-    <Compile Include="TempController.cs" />
     <Compile Include="Core\LocomotionController.cs" />
+    <Compile Include="Core\CharacterMotor.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
