--- a/BetterCharacterController_TestProject/Assembly-CSharp.csproj
+++ b/BetterCharacterController_TestProject/Assembly-CSharp.csproj
@@ -61,6 +61,9 @@
  <Reference Include="BetterCharacterController">
  <HintPath>/Users/acapobianchi/Documents/Work/Unity/Libraries/BetterCharacterController/BetterCharacterController_TestProject/Assets/Plugins/BetterCharacterController.dll</HintPath>
  </Reference>
+ <Reference Include="ThirstPersonShooterCamera">
+ <HintPath>/Users/acapobianchi/Documents/Work/Unity/Libraries/BetterCharacterController/BetterCharacterController_TestProject/Assets/Plugins/ThirstPersonShooterCamera.dll</HintPath>
+ </Reference>
  <Reference Include="UnityEditor.iOS.Extensions.Xcode">
  <HintPath>/Applications/Unity/Unity.app/Contents/PlaybackEngines/iOSSupport/UnityEditor.iOS.Extensions.Xcode.dll</HintPath>
  </Reference>
